# Aletheia-NetElixir

./: README.md  main.py  predict.py  pyproject.toml  requirements.txt  run.sh
aletheia/: __init__.py  config.py  pipeline.py
aletheia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aletheia/evaluation/: __init__.py  metrics.py  plots.py  reporter.py
aletheia/features/: base.py  lag_features.py  marketing_features.py  pipeline.py  rolling_features.py  time_features.py
aletheia/ingestion/: __init__.py  base.py  bing_ads.py  google_ads.py  merger.py  meta_ads.py  validator.py
aletheia/models/: __init__.py  base.py  lightgbm_model.py  predictor.py  trainer.py
artefacts/models/: lgbm_revenue.txt
output/: predictions.csv
tests/: test_evaluation.py  test_features.py  test_ingestion.py  test_models.py
tests/fixtures/: bing_ads_sample.csv  google_ads_sample.csv  meta_ads_sample.csv
