[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "0.1.0"
description = "AI-powered marketing copilot for ecommerce forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aletheia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["aletheia"]
omit = ["tests/*"]
